--- a/workshop1/Dockerfile-multi-stage-build
+++ b/workshop1/Dockerfile-multi-stage-build
@@ -1,5 +1,5 @@
 FROM docker.io/library/golang as firstbuild
-RUN . /kcdkerala
+COPY . /kcdkerala
 WORKDIR /kcdkerala
 RUN go build main.go
 ENTRYPOINT /kcdkerala/main
